# lr_standalone

./: CMakeLists.txt  LRupdateHLS.cpp  main.cpp
